--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -1160,21 +1160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "da918374",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#converting the yes and no into 1's and 0's\n",
     "df['Churn'] = df['Churn'].map({'Yes': 1, 'No': 0})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "e24b4050",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "x = df.drop(columns=['Churn'])\n",
     "y = df['Churn']"
    ]
@@ -1191,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "b569a4a2",
    "metadata": {},
    "outputs": [
@@ -1308,15 +1310,15 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.svm import SVC\n",
     "\n",
-    "models = [\n",
-    "    ('LogisticRegression', LogisticRegression(max_iter=500)),\n",
-    "    ('RandomForest', RandomForestClassifier(n_estimators=100)),\n",
-    "    ('GradientBoosting', GradientBoostingClassifier(n_estimators=100)),\n",
-    "    ('LDA', LinearDiscriminantAnalysis()),\n",
-    "    ('QDA', QuadraticDiscriminantAnalysis()),\n",
-    "    ('KNN', KNeighborsClassifier()),\n",
-    "    ('SVM', SVC())\n",
-    "]\n",
+    "# models = [\n",
+    "#     ('LogisticRegression', LogisticRegression(max_iter=500)),\n",
+    "#     ('RandomForest', RandomForestClassifier(n_estimators=100)),\n",
+    "#     ('GradientBoosting', GradientBoostingClassifier(n_estimators=100)),\n",
+    "#     ('LDA', LinearDiscriminantAnalysis()),\n",
+    "#     ('QDA', QuadraticDiscriminantAnalysis()),\n",
+    "#     ('KNN', KNeighborsClassifier()),\n",
+    "#     ('SVM', SVC())\n",
+    "# ]\n",
     "\n",
     "# Define transformers\n",
     "preprocessor = ColumnTransformer(\n",
@@ -1327,23 +1329,23 @@
     "    remainder='passthrough'\n",
     "    )\n",
     "\n",
-    "# Full pipeline with SMOTE\n",
-    "for name, model in models:\n",
-    "    clf = Pipeline(steps=[\n",
-    "        ('preprocessor', preprocessor),  # your ColumnTransformer\n",
-    "        ('smote', SMOTE(random_state=42)),\n",
-    "        ('model', model)\n",
-    "    ])\n",
-    "    clf.fit(x_train, y_train)\n",
-    "    y_pred = clf.predict(x_test)\n",
-    "    print(f\"\\n{name} Results:\")\n",
-    "    print(classification_report(y_test, y_pred))\n",
+    "# # Full pipeline with SMOTE\n",
+    "# for name, model in models:\n",
+    "#     clf = Pipeline(steps=[\n",
+    "#         ('preprocessor', preprocessor),  # your ColumnTransformer\n",
+    "#         ('smote', SMOTE(random_state=42)),\n",
+    "#         ('model', model)\n",
+    "#     ])\n",
+    "#     clf.fit(x_train, y_train)\n",
+    "#     y_pred = clf.predict(x_test)\n",
+    "#     print(f\"\\n{name} Results:\")\n",
+    "#     print(classification_report(y_test, y_pred))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "d97c2031",
    "metadata": {},
    "outputs": [
@@ -1390,6 +1392,7 @@
     "grid_search = GridSearchCV(rf_pipeline, param_grid, cv=5, scoring='roc_auc', n_jobs=-1)\n",
     "grid_search.fit(x_train, y_train)\n",
     "\n",
+    "# Test and eval\n",
     "print(\"Best params:\", grid_search.best_params_)\n",
     "print(\"Best ROC-AUC:\", grid_search.best_score_)\n",
     "print(\"\\nClassification Report on Test Set:\")\n",
@@ -1461,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "a7fe1343",
    "metadata": {},
    "outputs": [
@@ -1489,21 +1492,26 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
+    "# model_pipeline\n",
     "knn_pipeline = Pipeline(steps=[\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('smote', SMOTE(random_state=42)),\n",
     "    ('model', KNeighborsClassifier())\n",
     "])\n",
     "\n",
+    "#param grid for the model\n",
     "param_grid_knn = {\n",
     "    'model__n_neighbors': [3, 5, 7, 9],\n",
     "    'model__weights': ['uniform', 'distance'],\n",
     "    'model__p': [1, 2]  # Manhattan (1) or Euclidean (2)\n",
     "}\n",
     "\n",
+    "#implementing grid search cv\n",
     "grid_search_knn = GridSearchCV(knn_pipeline, param_grid_knn, cv=5, scoring='roc_auc', n_jobs=-1)\n",
     "grid_search_knn.fit(x_train, y_train)\n",
     "\n",
+    "\n",
+    "# Tests and evals\n",
     "print(\"Best params (KNN):\", grid_search_knn.best_params_)\n",
     "print(\"Best ROC-AUC (CV):\", grid_search_knn.best_score_)\n",
     "\n",
